# fast-quotes

./: .gitignore  Dockerfile  README.md  exercise1.md  exercise2.md  pyproject.toml
fast_quotes/: main.py
tests/: test_get_quotes.py
