[tool.poetry]
name = "fast-quotes"
version = "0.1.0"
description = ""
authors = ["Ben Dowen <dirtydevil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
requests = "^2.31.0"
pytest = "^8.0.0"
pylint = "^3.0.3"
pycodestyle = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
